--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fruktur:ital@0;1&family=Kalam:wght@300;400;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Kalam:wght@300;400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <div class="parent"></div>
+    <div class="Title">
+        <h1>VINTAGE SKETCH GAME</h1>
+    </div>
+    <div class="Parent">
+        <div class="Child Controls">
+            <div class="Heading">
+                <h2>Select Your Colors</h2>
+            </div>
+            <ul>
+                <li>
+                    <h3>Color1</h3>
+                    <div id="color-1"></div>
+                </li>
+                <li>
+                    <h3>Color2</h3>
+                    <div id="color-2"></div>
+                </li>
+                <li>
+                    <h3>Color3</h3>
+                    <div id="color-3"></div>
+                </li>
+                <li>
+                    <h3>Color4</h3>
+                    <div id="color-4"></div>
+                </li>
+                <li>
+                    <h3>Color5</h3>
+                    <div id="color-5"></div>
+                </li>
+                <li>
+                    <h3>Color6</h3>
+                    <div id="color-6"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="Child Grid"></div>
+    </div>
 </body>
+
 </html>
