--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
             <ul>
                 <li>
                     <h3>Color1</h3>
-                    <div id="color-1"></div>
+                    <div id="color-1" class="colors"></div>
                 </li>
                 <li>
                     <h3>Color2</h3>
-                    <div id="color-2"></div>
+                    <div id="color-2" class="colors"></div>
                 </li>
                 <li>
                     <h3>Color3</h3>
-                    <div id="color-3"></div>
+                    <div id="color-3" class="colors"></div>
                 </li>
                 <li>
                     <h3>Color4</h3>
-                    <div id="color-4"></div>
+                    <div id="color-4" class="colors"></div>
                 </li>
                 <li>
                     <h3>Color5</h3>
-                    <div id="color-5"></div>
+                    <div id="color-5" class="colors"></div>
                 </li>
                 <li>
                     <h3>Color6</h3>
-                    <div id="color-6"></div>
+                    <div id="color-6" class="colors"></div>
                 </li>
             </ul>
         </div>
