reset button added reset button now when clicked resets the grid to normal and removes the selected color to normal

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <div id="color-6" class="colors"></div>
                 </li>
             </ul>
+            <div class="reset-button">
+                <button id="reset">Reset Color</button>
+            </div>
         </div>
         <div class="Child Grid"></div>
     </div>
